--- a/src/loader.css
+++ b/src/loader.css
@@ -1,38 +1,64 @@
-/* HTML: <div class="loader"></div> */
-.loader {
-  width: 50px;
-  aspect-ratio: 1;
-  display: grid;
-  border: 4px solid #0000;
-  border-radius: 50%;
-  border-color: #ccc #0000;
-  animation: l16 1s infinite linear;
+/* Fullscreen black background */
+.loader-overlay {
+  position: fixed;
+  inset: 0; /* top right bottom left = 0 */
+  background: none;
+  /* backdrop-filter: blur(4px); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
 }
-.loader::before,
-.loader::after {
-  content: "";
-  grid-area: 1/1;
-  margin: 2px;
-  border: inherit;
+.loader {
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  border: 3px solid;
+  /* border-color: #fff #fff transparent transparent; */
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after,
+.loader::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 3px solid;
+  border-color: transparent transparent #ff3d00 #ff3d00;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotationBack 0.5s linear infinite;
+  transform-origin: center center;
 }
 .loader::before {
-  border-color: #f03355 #0000;
-  animation: inherit;
-  animation-duration: 0.5s;
-  animation-direction: reverse;
+  width: 32px;
+  height: 32px;
+  /* border-color: #fff #fff transparent transparent; */
+  animation: rotation 1.5s linear infinite;
 }
-.loader::after {
-  margin: 8px;
-}
-.loader-wrapper {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-@keyframes l16 {
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
   100% {
-    transform: rotate(1turn);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotationBack {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
